se completa el microservicio posiciones